--- a/resources/assets/styles/common/global.scss
+++ b/resources/assets/styles/common/global.scss
@@ -22,5 +22,66 @@ a {
 }
 
 body{
-  background: red !important;
+  background: white;
+}
+
+.banner-principal{
+  padding: 100px 10px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f8ff;
+  color: red;
+}
+
+.footer{
+  .container{
+    padding: 0;
+    max-width: 100%;
+    >div{
+      padding: 50px 100px;
+      justify-content: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      background-color: #0065F2;
+      color: white;
+      .logos{
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        .social-media{
+          a{
+            img{
+              width: 30px;
+              height: 30px;
+              margin-right: 10px;
+            }
+          }
+        }
+      }
+      .footer-links{
+        display: flex;
+        gap: 100px;
+        ul{
+          list-style: none;
+          li{
+            a{
+              color: white;
+            }
+          }
+        }
+        div{
+          span{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+          }
+        }
+      }
+    }
+  }
 }
