--- a/resources/assets/styles/common/global.scss
+++ b/resources/assets/styles/common/global.scss
@@ -21,18 +21,71 @@ a {
   }
 }
 
-body{
-  background: white;
+.container{
+  padding: 0 !important;
+  max-width: 100% !important;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px !important;
+  div{
+    a.menu{
+      img{
+        width: 25px;
+        height: 25px;
+      }
+    }
+  }
+  .nav-primary{
+    .menu-main-menu-container{
+      ul{
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 40px;
+        list-style: none;
+        color: #0065f2;
+        margin: 0
+        li{
+          margin-right: 20px;
+        }
+        li#menu-item-17{
+          border-radius: 17px;
+          border: none;
+          padding: 5px 20px;
+          background: #0065f2;
+          a{
+            color: white;
+          }
+        }
+      }
+    }
+  }
 }
 
 .banner-principal{
+  height: 100vh;
   padding: 100px 10px;
   justify-content: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #f2f8ff;
-  color: red;
+  color:#0065F2;
+  p{
+    margin: 0;
+    font-size: 20px;
+    font-weight: 400;
+  }
+  h1{
+    margin: 20px 0;
+    font-size: 50px;
+    font-weight: bold;
+  }
 }
 
 .footer{
@@ -41,7 +94,6 @@ body{
     max-width: 100%;
     >div{
       padding: 50px 100px;
-      justify-content: center;
       display: flex;
       justify-content: space-between;
       align-items: baseline;
