--- a/resources/assets/styles/common/global.scss
+++ b/resources/assets/styles/common/global.scss
@@ -66,27 +66,26 @@ a {
     }
   }
 }
-
-.banner-principal{
-  height: 100vh;
-  padding: 100px 10px;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f2f8ff;
-  color:#0065F2;
-  p{
-    margin: 0;
-    font-size: 20px;
-    font-weight: 400;
-  }
-  h1{
-    margin: 20px 0;
-    font-size: 50px;
-    font-weight: bold;
-  }
-}
+// .banner-principal{
+//   height: 100vh;
+//   padding: 100px 10px;
+//   justify-content: center;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   background-color: #f2f8ff;
+//   color:#0065F2;
+//   p{
+//     margin: 0;
+//     font-size: 20px;
+//     font-weight: 400;
+//   }
+//   h1{
+//     margin: 20px 0;
+//     font-size: 50px;
+//     font-weight: bold;
+//   }
+// }
 
 .collaboration{
   display: flex;
